--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="96"
+    android:viewportHeight="96">
+  <group android:scaleX="0.44"
+      android:scaleY="0.44"
+      android:translateX="26.88"
+      android:translateY="26.88">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#FF000000"
+        android:pathData="M82.27,81.86a1,1 0,0 1,-0.61 -0.22L61.72,66.1H20.8A10.63,10.63 0,0 1,10.18 55.48V17.94A10.64,10.64 0,0 1,20.8 7.32H83.38A10.63,10.63 0,0 1,94 17.94V55.48A10.63,10.63 0,0 1,83.38 66.1h-0.11V80.86a1,1 0,0 1,-0.56 0.89A1,1 0,0 1,82.27 81.86ZM20.8,9.32a8.63,8.63 0,0 0,-8.62 8.62V55.48A8.63,8.63 0,0 0,20.8 64.1H62.07a1,1 0,0 1,0.61 0.21l18.59,14.5V65.1a1,1 0,0 1,1 -1h1.11A8.63,8.63 0,0 0,92 55.48V17.94a8.63,8.63 0,0 0,-8.62 -8.62Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M13.73,88.68a1.13,1.13 0,0 1,-0.44 -0.1,1 1,0 0,1 -0.56,-0.9V72.93h-0.1A10.64,10.64 0,0 1,2 62.3V24.76a10.58,10.58 0,0 1,9.47 -10.54,1 1,0 1,1 0.21,2A8.59,8.59 0,0 0,4 24.76V62.3a8.64,8.64 0,0 0,8.63 8.63h1.1a1,1 0,0 1,1 1v13.7L33.31,71.14a1,1 0,0 1,0.62 -0.21H70.81a1,1 0,0 1,0 2H34.27L14.35,88.47A1,1 0,0 1,13.73 88.68Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M41,54.06H36.7a3.65,3.65 0,0 1,-3.65 -3.64V34a3.65,3.65 0,0 1,3.65 -3.64H41A3.65,3.65 0,0 1,44.69 34V50.42A3.65,3.65 0,0 1,41 54.06ZM36.7,32.32A1.64,1.64 0,0 0,35.05 34V50.42a1.64,1.64 0,0 0,1.65 1.64H41a1.64,1.64 0,0 0,1.65 -1.64V34A1.64,1.64 0,0 0,41 32.32Z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M64,55.53h0c-4.73,0 -13.71,-0.64 -20.72,-4.35a1,1 0,0 1,0.93 -1.77C50.79,52.92 59.41,53.5 64,53.53h0a3.35,3.35 0,0 0,3.32 -3l1.8,-15a3.36,3.36 0,0 0,-3.34 -3.77H55.51a1,1 0,0 1,-0.77 -0.35,1 1,0 0,1 -0.22,-0.81c0,-0.28 0.55,-2.14 1.36,-5 0.25,-2.54 -0.14,-4.33 -1.13,-5.18a3,3 0,0 0,-2.1 -0.61,15 15,0 0,1 -8.58,13.75 1,1 0,0 1,-1.31 -0.55,1 1,0 0,1 0.54,-1.3h0a12.83,12.83 0,0 0,7.33 -12.71,1 1,0 0,1 0.73,-1A5.43,5.43 0,0 1,56 19c1.56,1.32 2.18,3.68 1.83,7l0,0.17c-0.52,1.82 -0.84,3 -1,3.7h9a5.37,5.37 0,0 1,5.33 6l-1.8,15A5.35,5.35 0,0 1,64 55.53Z"/>
+  </group>
 </vector>
