--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/common_spacing"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <ImageView
         android:id="@+id/avatar"
         android:layout_width="@dimen/posts_avatar_size"
         android:layout_height="@dimen/posts_avatar_size"
+        app:srcCompat="@drawable/avatar_fiatal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/author"
@@ -80,7 +80,7 @@
         android:layout_height="@dimen/icon_size"
         android:layout_marginStart="@dimen/icon_margin"
         android:layout_marginTop="@dimen/icon_margin"
-        android:src="@drawable/ic_favorite_24"
+        android:src="@drawable/ic_favorite_border_24_grey"
         app:layout_constraintStart_toStartOf="@+id/content"
         app:layout_constraintTop_toBottomOf="@+id/content" />
 
@@ -89,10 +89,10 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginStart="@dimen/icon_margin"
-        tools:text="123"
         app:layout_constraintBottom_toBottomOf="@+id/post_likes"
         app:layout_constraintStart_toEndOf="@+id/post_likes"
-        app:layout_constraintTop_toTopOf="@+id/post_likes" />
+        app:layout_constraintTop_toTopOf="@+id/post_likes"
+        tools:text="123" />
 
     <ImageView
         android:id="@+id/post_share"
@@ -109,10 +109,10 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginStart="@dimen/icon_margin"
-        tools:text="456"
         app:layout_constraintBottom_toBottomOf="@+id/post_share"
         app:layout_constraintStart_toEndOf="@+id/post_share"
-        app:layout_constraintTop_toTopOf="@+id/post_share" />
+        app:layout_constraintTop_toTopOf="@+id/post_share"
+        tools:text="456" />
 
     <ImageView
         android:id="@+id/post_eye"
@@ -130,8 +130,8 @@
         android:layout_height="20dp"
         android:layout_marginTop="@dimen/icon_margin"
         android:layout_marginEnd="@dimen/icon_margin"
-        tools:text="789"
         app:layout_constraintEnd_toEndOf="@+id/content"
-        app:layout_constraintTop_toBottomOf="@+id/content" />
+        app:layout_constraintTop_toBottomOf="@+id/content"
+        tools:text="789" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
