В дизайне добавил стили и изменил кнопки

--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -41,15 +41,15 @@
         app:layout_constraintTop_toBottomOf="@id/author"
         tools:text="12 мая 12:16" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/menu"
+        style="@style/Widget.AppTheme.MyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/common_spacing"
-        android:background="@android:color/transparent"
+        android:gravity="center"
+        app:icon="@drawable/ic_more_vert_24_grey"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_more_vert_24_grey" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
@@ -71,45 +71,27 @@
         app:layout_constraintTop_toBottomOf="@id/barrier"
         tools:text="@tools:sample/lorem/random" />
 
-    <ImageView
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/post_likes"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:layout_marginStart="@dimen/icon_margin"
-        android:layout_marginTop="@dimen/icon_margin"
-        android:src="@drawable/ic_favorite_border_24_grey"
-        app:layout_constraintStart_toStartOf="@+id/content"
+        style="@style/Widget.AppTheme.LikeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:checkable="true"
+        app:icon="@drawable/ic_like_selector"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/content" />
 
-    <TextView
-        android:id="@+id/post_likes_score"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_marginStart="@dimen/icon_margin"
-        app:layout_constraintBottom_toBottomOf="@+id/post_likes"
-        app:layout_constraintStart_toEndOf="@+id/post_likes"
-        app:layout_constraintTop_toTopOf="@+id/post_likes"
-        tools:text="123" />
 
-    <ImageView
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/post_share"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:layout_marginStart="@dimen/icon_margin"
-        android:layout_marginTop="@dimen/icon_margin"
-        android:src="@drawable/ic_share_24"
-        app:layout_constraintStart_toEndOf="@+id/post_likes_score"
-        app:layout_constraintTop_toBottomOf="@+id/content" />
-
-    <TextView
-        android:id="@+id/post_share_score"
+        style="@style/Widget.AppTheme.MyButton"
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/icon_margin"
-        app:layout_constraintBottom_toBottomOf="@+id/post_share"
-        app:layout_constraintStart_toEndOf="@+id/post_share"
-        app:layout_constraintTop_toTopOf="@+id/post_share"
-        tools:text="456" />
+        app:icon="@drawable/ic_share_24"
+        app:layout_constraintStart_toEndOf="@+id/post_likes"
+        app:layout_constraintTop_toBottomOf="@+id/content" />
 
     <ImageView
         android:id="@+id/post_eye"
